[package]
name = "inventory-health-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "0.12.2"
tokio = {version = "1.38.0", features = ["full"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = {version = "1.0.117"}
chrono = {version = "0.4.38"}
dotenvy = {version = "0.15.7"}
tokio-util = {version = "0.7.11", features = ["compat"] }
anyhow = "1.0.86"
mongodb = {version = "2.8.2"}
futures = {version = "0.3.30"}
rayon = "1.10.0"
oracle = "0.6"

[lib]
name = "inventory_health"
path = "src/lib/mod.rs"